// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Mutations createTask 1`] = `
Object {
  "assignedUsers": Array [],
  "color": "#FFFFFF",
  "comments": Array [],
  "completed": false,
  "description": null,
  "dueDate": null,
  "id": "TASK_ID",
  "name": "new task name",
  "points": 0,
  "recurrance": null,
  "startDate": "haha no",
  "subTasks": Array [],
  "tags": Array [],
  "timeWorkedOn": 0,
}
`;

exports[`Task Mutations createTask 2`] = `
Object {
  "assignedUsers": Array [],
  "color": "#FFFFFF",
  "comments": Array [],
  "completed": false,
  "description": null,
  "dueDate": null,
  "id": "TASK_ID",
  "name": "haha newer name",
  "points": 0,
  "recurrance": null,
  "startDate": "noo",
  "subTasks": Array [],
  "tags": Array [],
  "timeWorkedOn": 0,
}
`;

exports[`Task Mutations createTask 3`] = `
Object {
  "columnIds": Array [
    "COL_ID 0",
  ],
  "columns": Array [
    Object {
      "id": "COL_ID 0",
      "isCompletedColumn": false,
      "name": "Todo",
      "taskIds": Array [
        "TASK_ID 0",
        "TASK_ID 1",
        "TASK_ID 2",
        "TASK_ID 3",
        "TASK_ID 4",
        "TASK_ID 5",
        "TASK_ID 6",
        "TASK_ID 7",
        "TASK_ID 8",
        "TASK_ID 9",
        "TASK_ID 10",
        "TASK_ID 11",
        "TASK_ID 12",
        "TASK_ID 13",
        "TASK_ID 14",
        "TASK_ID 15",
        "TASK_ID 16",
      ],
      "taskLimit": 0,
    },
  ],
  "id": "PROJECT_ID",
  "name": "PHOON_TIME",
  "ownerId": "OWNER_ID",
  "swimlanes": Array [],
  "tags": Array [],
  "tasks": Array [
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 0",
      "name": "new task name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T22:04:54.777Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 1",
      "name": "new task name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T22:30:41.705Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 2",
      "name": "new task name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:11:47.771Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 3",
      "name": "new task name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:12:18.699Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 4",
      "name": "new task name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:12:25.267Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 5",
      "name": "new task name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:12:35.396Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 6",
      "name": "new task name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:17:06.381Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 7",
      "name": "new task name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:17:30.959Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 8",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:19:14.389Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 9",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:19:22.684Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 10",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:20:27.884Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 11",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:20:34.478Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 12",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:22:00.690Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 13",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:22:48.985Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 14",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:22:57.911Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 15",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:23:03.642Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
    Object {
      "assignedUsers": Array [],
      "color": "#FFFFFF",
      "comments": Array [],
      "completed": false,
      "description": null,
      "dueDate": null,
      "id": "TASK_ID 16",
      "name": "haha newer name",
      "points": 0,
      "recurrance": null,
      "startDate": 2019-06-17T23:24:33.379Z,
      "subTasks": Array [],
      "tags": Array [],
      "timeWorkedOn": 0,
    },
  ],
  "users": Array [],
}
`;
